// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssnRowItemTemplate component should generate styles as expected 1`] = `
Object {
  "romeoColour": Object {
    "&.blue": Object {
      "background": "#D3ECFA",
    },
    "&.green": Object {
      "background": "#D0F9D2",
    },
    "&.none::after": Object {
      "borderBottom": "1px solid #333",
      "content": "\\" \\"",
      "height": "1.5em",
      "position": "absolute",
      "transform": "translateY(-0.85em) translateX(0.3em) rotate(45deg)",
      "width": "1.4em",
    },
    "&.white": Object {
      "background": "#FFFFFF",
    },
    "&.yellow": Object {
      "background": "#FFFF99",
    },
    "bottom": "-0.2em",
    "display": "inline-block",
    "height": "1em",
    "marginLeft": "0.5em",
    "marginRight": "0.3em",
    "outline": "1px solid #333",
    "position": "relative",
    "width": "1em",
  },
}
`;

exports[`IssnRowItemTemplate component should render a value 1`] = `
<Fragment>
  <WithStyles(Typography)
    component="span"
    variant="body2"
  >
    <span>
      1234-1234
    </span>

    <WithStyles(ExternalLink)
      aria-label="Check publisher's OA archiving policy in a new window"
      href="http://example.com/sherpa?issn=1234-1234"
      title="Check publisher's OA archiving policy"
    >
      <span
        className="example blue"
        title="Can archive post-print (ie final draft post-refereeing) or publisher's version/PDF"
      />
      SHERPA/RoMEO
    </WithStyles(ExternalLink)>
    <span>
        
    </span>
    <WithStyles(ExternalLink)
      aria-label="Source publisher name/place and alternate ISSNs in a new window"
      href="http://example.com/ulrichs?id=1234"
    >
      Ulrichs
    </WithStyles(ExternalLink)>
  </WithStyles(Typography)>
</Fragment>
`;

exports[`IssnRowItemTemplate component should render default view 1`] = `
<Fragment>
  <WithStyles(Typography)
    component="span"
    variant="body2"
  >
    <span>
      <Component />
    </span>

  </WithStyles(Typography)>
</Fragment>
`;

exports[`IssnRowItemTemplate component should skip missing ulrichs or sherparomeo 1`] = `
<Fragment>
  <WithStyles(Typography)
    component="span"
    variant="body2"
  >
    <span>
      1235-1235
    </span>

  </WithStyles(Typography)>
</Fragment>
`;
